<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

        <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:text="Can0n">
            <requestFocus/>
        </EditText>

        <EditText
                android:id="@+id/email_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="jwangof@gmail.com">
        </EditText>

        <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="asdasd">
        </EditText>

        <EditText
                android:id="@+id/password_repeat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:text="asdasd">
        </EditText>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/registration_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registration_button"
                android:onClick="register"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_button"
                android:onClick="cancel"/>
    </LinearLayout>

</RelativeLayout>

